# lang-nno

./: CITATION.cff  Links.md  README  README.markdown  README.md  abbreviations-stems-fst-src.md  adjectives-affixes-fst-src.md  clitics-fst-src.md  configure.ac  gamal-root-fst-src.md  index-header.md  index.md  lemmacount.json  manifest.toml  manifest.toml.in  nno.jspwiki  nno.md  nouns-affixes-fst-src.md  src-cg3-functions.cg3.md  src-fst-affixes-adjectives.lexc.md  src-fst-affixes-nouns.lexc.md  src-fst-affixes-symbols.lexc.md  src-fst-affixes-verbs.lexc.md  src-fst-clitics.lexc.md  src-fst-gamal-root.lexc.md  src-fst-morphology-affixes-adjectives.lexc.md  src-fst-morphology-affixes-nouns.lexc.md  src-fst-morphology-affixes-symbols.lexc.md  src-fst-morphology-affixes-verbs.lexc.md  src-fst-morphology-clitics.lexc.md  src-fst-morphology-gamal-root.lexc.md  src-fst-morphology-stems-abbreviations.lexc.md  src-fst-phonetics-txt2ipa.xfscript.md  src-fst-stems-abbreviations.lexc.md  src-fst-transcriptions-transcriptor-abbrevs2text.lexc.md  src-fst-transcriptions-transcriptor-symbols2text.lexc.md  src-phonetics-txt2ipa.xfscript.md  src-transcriptions-transcriptor-abbrevs2text.lexc.md  tools-grammarcheckers-grammarchecker.cg3.md  tools-tokenisers-tokeniser-disamb-gt-desc.pmscript.md  (+2 more)
.gut/: delta.toml  manifest.toml
corp/: nou-00.u8.txt
devtools/: test_ospell-office_suggestions.sh  test_voikkospell_suggestions.sh
devtools/testdata/: corpus.txt
doc/: nno.jspwiki  root-morphology.jspwiki
docs/: Links.jspwiki  _config.yml  docu-unix-nno.txt  index-header.md  index.md  root-morphology.md
docs/typosreport/: report.json
m4/: giella-config-files.m4
src/: Makefile  adj-nno-lex.txt  adv-nno-lex.txt  allcaps.fst  closed-nno-lex.txt  nno-dis.rle  nno-lex.txt  nno-num.txt  noun-nno-lex.txt  pp-nno-lex.txt  propernoun-nno-lex.txt  punct-nno-lex.txt  twol-nno.txt  verb-nno-lex.txt
src/fst/: .gitignore  Makefile.am  clitics.lexc  gamal-root.lexc
src/fst/incoming/: Makefile.am  parse-nno.pl
src/fst/morphology/: Makefile.am
src/fst/morphology/affixes/: nouns.lexc
src/fst/morphology/incoming/: .gitignore  Makefile.am  parse-nno.pl
src/fst/morphology/incoming/ordbank_nn/: paradigme_nn.txt
src/fst/morphology/test/: generate-adjective-lemmas.sh.in
src/fst/orthography/: Makefile.am  allcaps.xfscript
src/fst/stems/: abbreviations.lexc  numerals.lexc
src/morphology/: Makefile.am  gamal-root.lexc  phonology.twolc  root.lexc
src/morphology/affixes/: adjectives.lexc  verbs.lexc
src/morphology/incoming/: Makefile  parse-nno.pl
src/morphology/stems/: adverbs.lexc  closed-classes.lexc  nouns.lexc  pronouns.lexc  verbs.lexc
src/orthography/: Latn-to-Runr.regex  Makefile.am  spellrelax.Runr.regex
src/syntax/: disambiguator.cg3
testing/: Makefile
tools/grammarcheckers/: pipespec.xml  pipespec.xml.in
tools/spellcheckers/: editdist.Runr.txt  final_strings.Runr.txt  final_strings.default.txt  index.Runr.xml  index.Runr.xml.in  strings.Runr.txt
tools/spellcheckers/weights/: .gitignore  Makefile.am  Repeat-ngram.pl  ngram6-1-topp1000.txt
